--- a/routes/lang/en.json
+++ b/routes/lang/en.json
@@ -486,6 +486,10 @@
   "app.message.generalRibbonBgColor": "Background Color",
   "app.message.generalRibbonTextColor": "Text Color",
   "app.updateavailable": "A newer version of the application is now available. To ensure you have the latest updates, please refresh your page. The window will be automatically refreshed in 20 seconds unless you choose to cancel.",
+  "app.passwordneedsuppercaseletter": "Password needs at least one uppercase letter.",
+  "app.passwordneedsspeccialcharacter": "Password needs at least one special character !@#$%^&* .",
+  "app.passwordneedsonenumber": "Password needs at least one number.",
   "app.crosscoursepagecopy": "Copying pages across courses is not yet available. It will be implemetend in future releases.",
+  "app.confirmpasswordnotmatch": "Confirmation password does not match the new password.",
   "app.cannotcopyobjecthere": "Unable to copy this type of content here."
 }
