added translation for drawer https://github.com/MeD-DMC/adapt_authoring_college/issues/16

--- a/routes/lang/fr.json
+++ b/routes/lang/fr.json
@@ -1515,5 +1515,7 @@
     "app.resetPasswordCount": "Réinitialisations",
     "app.unlockPasswordReset": "Déverrouiller la réinitialisation de mot de passe",
     "app.confirmUnlockPasswordReset": "Déverrouiller la réinitialisation de mot de passe pour<br/><b>%{email}</b>?",
-    "app.passwordForceMessage": "Conformément à nos protocoles de sécurité départementaux, nous vous demandons de mettre à jour votre mot de passe Adapt dès maintenant. Ce message ne sera plus affiché une fois que la modification de votre mot de passe sera terminée."
+    "app.passwordForceMessage": "Conformément à nos protocoles de sécurité départementaux, nous vous demandons de mettre à jour votre mot de passe Adapt dès maintenant. Ce message ne sera plus affiché une fois que la modification de votre mot de passe sera terminée.",
+    "app.scaffold.config._drawer._drawer.label": "Panneau latéral",
+    "app.scaffold._drawer": "Panneau latéral"
 }
