--- a/routes/lang/en.json
+++ b/routes/lang/en.json
@@ -131,7 +131,7 @@
   "app.resetpassworderror": "Your password could not be changed",
   "app.newpassword": "New password",
   "app.confirmpassword": "Confirm password",
-  "app.passwordtip": "Enter a new password below. The most secure passwords have a mix of numbers, letters (including capitals) and other characters.",
+  "app.passwordtip": "Enter a new password below.",
   "app.forgotpasswordblurb": "Enter the email address associated with your Adapt account, then click Continue.",
   "app.forgotpasswordfooter": "Contact %{supportContact} for help with restoring access to your account.",
   "app.anadmin": "an administrator",
@@ -324,6 +324,9 @@
   "app.errorsyntax": "Syntax error",
   "app.copyidtoclipboardsuccess": "Copied %{id} to clipboard",
   "app.copyidtoclipboarderror": "Error copying %{id} to clipboard",
+  "app.copyelementclipboardsuccess": "Copied %{type} to clipboard",
+  "app.clipboardempty": "Nothing copied in clipboard",
+  "app.pasteButton": "Paste content",
   "app.grid": "Grid",
   "app.list": "List",
   "app.ascending": "A to Z",
@@ -414,6 +417,66 @@
   "app.versionexists": "You already have this version of the plugin installed.",
   "app.unknownuser": "Unknown User",
   "app.langswitcher": "Français",
+  "app.langswitcherCode": "fr",
+  "app.scaffold._setCompletionOn.inview.variable": "In View",
+  "app.scaffold._setCompletionOn.allItems.variable": "All Items",
+  "app.scaffold._lockType.custom.variable": "Custom",
+  "app.scaffold._lockType.lockLast.variable": "Lock Last",
+  "app.scaffold._lockType.sequential.variable": "Sequential",
+  "app.scaffold._lockType.unlockFirst.variable": "Unlock first",
+  "app.scaffold._level.page.variable": "Page",
+  "app.scaffold._level.block.variable": "Block",
+  "app.scaffold._level.component.variable": "Component",
+  "app.scaffold._titleMode.state.variable": "Show answer state as title",
+  "app.scaffold._titleMode.stateWithColor.variable": "Show answer state as title with color",
+  "app.scaffold._titleMode.feedbackWord.variable": "Use the word Feedback as title",
+  "app.scaffold._titleMode.originalComponent.variable": "Use title set in component",
+  "app.scaffold._selectionPosition.afterTitle.variable": "After title",
+  "app.scaffold._selectionPosition.afterFeedback.variable": "After feedback",
+  "app.scaffold._selectionStyle.iconWithText.variable": "Icon with text",
+  "app.scaffold._selectionStyle.plainText.variable": "Plain text",
+  "app.scaffold._selectionStyle.bubble.variable": "Bubble",
+  "app.scaffold._selectionStyle.bubbleWithColor.variable": "Bubble with color",
+  "app.scaffold._type.document.variable": "Document",
+  "app.scaffold._type.media.variable": "Media",
+  "app.scaffold._type.link.variable": "Link",
+  "app.scaffold._defaultDirection.ltr.variable": "Left to Right",
+  "app.scaffold._defaultDirection.rtl.variable": "Right to Left",
+  "app.scaffold._completionAttribute._isInteractionComplete.variable": "Interaction complete",
+  "app.scaffold._completionAttribute._isComplete.variable": "Complete",
+  "app.scaffold._onTrackingCriteriaMet.completed.variable": "Completed",
+  "app.scaffold._onTrackingCriteriaMet.passed.variable": "Passed",
+  "app.scaffold._onTrackingCriteriaMet.failed.variable": "Failed",
+  "app.scaffold._onTrackingCriteriaMet.incomplete.variable": "Incomplete",
+  "app.scaffold._onAssessmentFailure.completed.variable": "Completed",
+  "app.scaffold._onAssessmentFailure.failed.variable": "Failed",
+  "app.scaffold._onAssessmentFailure.incomplete.variable": "Incomplete",
+  "app.scaffold._exitStateIfIncomplete.auto.variable": "Auto",
+  "app.scaffold._exitStateIfIncomplete.suspend.variable": "Suspend",
+  "app.scaffold._exitStateIfIncomplete.normal.variable": "Normal",
+  "app.scaffold._exitStateIfComplete.auto.variable": "Auto",
+  "app.scaffold._exitStateIfComplete.suspend.variable": "Suspend",
+  "app.scaffold._exitStateIfComplete.normal.variable": "Normal",
+  "app.scaffold._level.debug.variable": "Debug",
+  "app.scaffold._level.info.variable": "Info",
+  "app.scaffold._level.warn.variable": "Warn",
+  "app.scaffold._level.error.variable": "Error",
+  "app.scaffold._level.fatal.variable": "Fatal",
+  "app.scaffold.improved-block-padding.legacy.variable": "Legacy",
+  "app.scaffold.improved-block-padding.improved.variable": "Improved",
+  "app.scaffold.margin-control.defaultSize.variable": "Default Size",
+  "app.scaffold.margin-control.noMargin.variable": "No Margin",
+  "app.scaffold._loopStyle.allPages.variable": "All pages",
+  "app.scaffold._loopStyle.siblings.variable": "Siblings",
+  "app.scaffold._loopStyle.none.variable": "None",
+  "app.scaffold.type.video/youtube.variable": "Video/Youtube",
+  "app.scaffold.type.video/vimeo.variable": "Video/Vimeo",
+  "app.scaffold._setCompletionOn.play.variable": "Play",
+  "app.scaffold._setCompletionOn.ended.variable": "Ended",
+  "app.scaffold._setCompletionOn.pass.variable": "Pass",
+  "app.scaffold._resetType.inherit.variable": "Inherit",
+  "app.scaffold._resetType.hard.variable": "Hard",
+  "app.scaffold._resetType.soft.variable": "Soft",
   "app.messagemanagement": "Message Management",
   "app.message.title": "Manage System Messages",
   "app.message.generalRibbon": "General Message Ribbon",
@@ -423,74 +486,11 @@
   "app.message.generalRibbonBgColor": "Background Color",
   "app.message.generalRibbonTextColor": "Text Color",
   "app.updateavailable": "A newer version of the application is now available. To ensure you have the latest updates, please refresh your page. The window will be automatically refreshed in 20 seconds unless you choose to cancel.",
-  "app.scaffold.type.video/youtube.variable": "Video/Youtube",
-  "app.scaffold.type.video/vimeo.variable": "Video/Vimeo",
-  "app.scaffold.margin-control.noMargin.variable": "No Margin",
-  "app.scaffold.margin-control.defaultSize.variable": "Default Size",
-  "app.scaffold.improved-block-padding.legacy.variable": "Legacy",
-  "app.scaffold.improved-block-padding.improved.variable": "Improved",
-  "app.scaffold._type.media.variable": "Media",
-  "app.scaffold._type.link.variable": "Link",
-  "app.scaffold._type.document.variable": "Document",
-  "app.scaffold._titleMode.stateWithColor.variable": "Show answer state as title with color",
-  "app.scaffold._titleMode.state.variable": "Show answer state as title",
-  "app.scaffold._titleMode.originalComponent.variable": "Use title set in component",
-  "app.scaffold._titleMode.feedbackWord.variable": "Use the word Feedback as title",
-  "app.scaffold._setCompletionOn.play.variable": "Play",
-  "app.scaffold._setCompletionOn.pass.variable": "Pass",
-  "app.scaffold._setCompletionOn.inview.variable": "In View",
-  "app.scaffold._setCompletionOn.ended.variable": "Ended",
-  "app.scaffold._setCompletionOn.allItems.variable": "All Items",
-  "app.scaffold._selectionStyle.plainText.variable": "Plain text",
-  "app.scaffold._selectionStyle.iconWithText.variable": "Icon with text",
-  "app.scaffold._selectionStyle.bubbleWithColor.variable": "Bubble with color",
-  "app.scaffold._selectionStyle.bubble.variable": "Bubble",
-  "app.scaffold._selectionPosition.afterTitle.variable": "After title",
-  "app.scaffold._selectionPosition.afterFeedback.variable": "After feedback",
-  "app.scaffold._resetType.soft.variable": "Soft",
-  "app.scaffold._resetType.inherit.variable": "Inherit",
-  "app.scaffold._resetType.hard.variable": "Hard",
-  "app.scaffold._onTrackingCriteriaMet.passed.variable": "Passed",
-  "app.scaffold._onTrackingCriteriaMet.incomplete.variable": "Incomplete",
-  "app.scaffold._onTrackingCriteriaMet.failed.variable": "Failed",
-  "app.scaffold._onTrackingCriteriaMet.completed.variable": "Completed",
-  "app.scaffold._onAssessmentFailure.incomplete.variable": "Incomplete",
-  "app.scaffold._onAssessmentFailure.failed.variable": "Failed",
-  "app.scaffold._onAssessmentFailure.completed.variable": "Completed",
-  "app.scaffold._loopStyle.siblings.variable": "Siblings",
-  "app.scaffold._loopStyle.none.variable": "None",
-  "app.scaffold._loopStyle.allPages.variable": "All pages",
-  "app.scaffold._lockType.unlockFirst.variable": "Unlock first",
-  "app.scaffold._lockType.sequential.variable": "Sequential",
-  "app.scaffold._lockType.lockLast.variable": "Lock Last",
-  "app.scaffold._lockType.custom.variable": "Custom",
-  "app.scaffold._level.warn.variable": "Warn",
-  "app.scaffold._level.page.variable": "Page",
-  "app.scaffold._level.info.variable": "Info",
-  "app.scaffold._level.fatal.variable": "Fatal",
-  "app.scaffold._level.error.variable": "Error",
-  "app.scaffold._level.debug.variable": "Debug",
-  "app.scaffold._level.component.variable": "Component",
-  "app.scaffold._level.block.variable": "Block",
-  "app.scaffold._exitStateIfIncomplete.suspend.variable": "Suspend",
-  "app.scaffold._exitStateIfIncomplete.normal.variable": "Normal",
-  "app.scaffold._exitStateIfIncomplete.auto.variable": "Auto",
-  "app.scaffold._exitStateIfComplete.suspend.variable": "Suspend",
-  "app.scaffold._exitStateIfComplete.normal.variable": "Normal",
-  "app.scaffold._exitStateIfComplete.auto.variable": "Auto",
-  "app.scaffold._defaultDirection.rtl.variable": "Right to Left",
-  "app.scaffold._defaultDirection.ltr.variable": "Left to Right",
-  "app.scaffold._completionAttribute._isInteractionComplete.variable": "Interaction complete",
-  "app.scaffold._completionAttribute._isComplete.variable": "Complete",
-  "app.pasteButton": "Paste content",
   "app.passwordneedsuppercaseletter": "Password needs at least one uppercase letter.",
   "app.passwordneedsspeccialcharacter": "Password needs at least one special character !@#$%^&* .",
   "app.passwordneedsonenumber": "Password needs at least one number.",
   "app.passwordchangemessage": "Kindly update your password. This notification will be automatically dismissed upon successful password modification.",
-  "app.langswitcherCode": "fr",
-  "app.crosscoursepagecopy": "Copying pages across courses is not yet available. It will be implemetend in future releases.",
-  "app.copyelementclipboardsuccess": "Copied %{type} to clipboard",
   "app.confirmpasswordnotmatch": "Confirmation password does not match the new password.",
-  "app.clipboardempty": "Nothing copied in clipboard",
+  "app.crosscoursepagecopy": "Copying pages across courses is not yet available. It will be implemetend in future releases.",
   "app.cannotcopyobjecthere": "Unable to copy this type of content here."
 }
