added anti-spam methods for mailservice

--- a/routes/lang/fr.json
+++ b/routes/lang/fr.json
@@ -1389,10 +1389,10 @@
     "app.versionexists": "Vous avez déjà installé cette version du module d’extension.",
     "app.unknownuser": "Utilisateur inconnu",
     "app.langswitcher": "English",
-    "app.items":"%{smart_count} éléments",
+    "app.items": "%{smart_count} éléments",
     "app.page": "page",
     "app.article": "article",
-    "app.block":"bloc",
+    "app.block": "bloc",
     "app.component": "composant",
     "app.scaffold.course._extensions._Adapt-accessibilityfixes.legend": "Corrections d'accessibilité",
     "app.scaffold.config._extensions._pageIncompletePrompt.legend": "Message-guide Page incomplète",
@@ -1504,12 +1504,15 @@
     "app.message.generalRibbonBgColor": "Couleur d'arrière-plan",
     "app.message.generalRibbonTextColor": "Couleur du texte",
     "app.updateavailable": "Une nouvelle version de l'application est désormais disponible. Pour vous assurer que vous disposez des dernières mises à jour, veuillez actualiser votre page. La fenêtre sera automatiquement actualisée dans 20 secondes, sauf si vous décidez d'annuler.",
+    "app.passwordrequirements": "Exigences relatives aux mots de passe",
     "app.passwordneedsuppercaseletter": "Une lettre majuscule",
     "app.passwordneedsspeccialcharacter": "Un caractère spécial !@#$%^&*",
     "app.passwordneedsonenumber": "Un chiffre",
     "app.passwordminimumlength": "8 caractères minimum",
-    "app.passwordrequirements": "Exigences relatives aux mots de passe",
-    "app.numberofrequirementscompleted": "%{number} sur %{total} exigences satisfaites",
     "app.passwordchangemessage": "Veuillez mettre à jour votre mot de passe. Cette notification sera automatiquement supprimée lors de la réussite de la modification du mot de passe.",
-    "app.confirmpasswordnotmatch": "Le mot de passe de confirmation ne correspond pas au nouveau mot de passe."
+    "app.numberofrequirementscompleted": "%{number} sur %{total} exigences satisfaites",
+    "app.confirmpasswordnotmatch": "Le mot de passe de confirmation ne correspond pas au nouveau mot de passe.",
+    "app.unlockPasswordReset": "Déverrouiller la réinitialisation de mot de passe",
+    "app.resetPasswordCount": "Réinitialisations",
+    "app.confirmUnlockPasswordReset": "Déverrouiller la réinitialisation de mot de passe pour<br/><b>%{email}</b>?"
 }
