--- a/routes/lang/en.json
+++ b/routes/lang/en.json
@@ -486,14 +486,17 @@
   "app.message.generalRibbonBgColor": "Background Color",
   "app.message.generalRibbonTextColor": "Text Color",
   "app.updateavailable": "A newer version of the application is now available. To ensure you have the latest updates, please refresh your page. The window will be automatically refreshed in 20 seconds unless you choose to cancel.",
+  "app.passwordrequirements": "Password requirements",
   "app.passwordneedsuppercaseletter": "One uppercase letter",
   "app.passwordneedsspeccialcharacter": "One special character !@#$%^&*",
   "app.passwordneedsonenumber": "One number",
-  "app.passwordchangemessage": "Kindly update your password. This notification will be automatically dismissed upon successful password modification.",
-  "app.confirmpasswordnotmatch": "Confirmation password does not match the new password.",
-  "app.passwordrequirements": "Password requirements",
   "app.passwordminimumlength": "8 characters minimum",
+  "app.passwordchangemessage": "Kindly update your password. This notification will be automatically dismissed upon successful password modification.",
   "app.numberofrequirementscompleted": "%{number} out of %{total} requirements completed.",
   "app.crosscoursepagecopy": "Copying pages across courses is not yet available. It will be implemetend in future releases.",
-  "app.cannotcopyobjecthere": "Unable to copy this type of content here."
+  "app.confirmpasswordnotmatch": "Confirmation password does not match the new password.",
+  "app.cannotcopyobjecthere": "Unable to copy this type of content here.",
+  "app.unlockPasswordReset": "Unlock Password Reset",
+  "app.resetPasswordCount": "Resets",
+  "app.confirmUnlockPasswordReset": "Unlock password reset for<br/><b>%{email}</b>?"
 }
