--- a/routes/lang/en.json
+++ b/routes/lang/en.json
@@ -108,6 +108,7 @@
   "app.myprojects": "My courses",
   "app.addnewproject": "Add new course",
   "app.sharedprojects": "Shared courses",
+  "app.allprojects": "All courses",
   "app.noprojectstodisplay": "No courses to display",
   "app.pleaseentervalue": "Please enter a value here",
   "app.pleaseaddfile": "Please choose a file to upload",
