--- a/routes/lang/fr.json
+++ b/routes/lang/fr.json
@@ -1587,5 +1587,6 @@
     "app.revealpassword": "Révéler le mot de passe",
     "app.passwordtoocommon": "Ce mot de passe est trop courant, veuillez utiliser un mot de passe plus unique.",
     "app.hidepassword": "Cacher le mot de passe",
-    "app.passwordatleast": "Votre mot de passe doit contenir au moins :"
+    "app.passwordatleast": "Votre mot de passe doit contenir au moins :",
+    "app.transferownershipto": "Transférer la propriété à"
 }
