WIP added course ownsership transfer UI on user management screen

--- a/routes/lang/fr.json
+++ b/routes/lang/fr.json
@@ -1088,6 +1088,7 @@
     "app.myprojects": "Mes cours",
     "app.addnewproject": "Ajouter un nouveau cours",
     "app.sharedprojects": "Cours partagés",
+    "app.allprojects": "Tous les cours",
     "app.noprojectstodisplay": "Aucun cours à afficher",
     "app.pleaseentervalue": "Veuillez entrer une valeur ici",
     "app.pleaseaddfile": "Veuillez choisir un fichier à télécharger",
@@ -1522,5 +1523,5 @@
     "app.passwordtoocommon": "Ce mot de passe est trop courant, veuillez utiliser un mot de passe plus unique.",
     "app.hidepassword": "Cacher le mot de passe",
     "app.passwordatleast": "Votre mot de passe doit contenir au moins :",
-    "app.allprojects": "Tous les cours"
+    "app.transferownershipto": "Transférer la propriété à"
 }
