--- a/routes/lang/en.json
+++ b/routes/lang/en.json
@@ -505,5 +505,8 @@
   "app.passwordtoocommon": "This password is too common, please use a more unique password.",
   "app.hidepassword": "Hide Password",
   "app.passwordatleast": "Your password must have at least:",
-  "app.transferownershipto": "Transfer ownership to"
+  "app.transferownershipto": "Transfer ownership to",
+  "app.confirmtransfertoanotheruser": "Are you sure you want to proceed with this transfer?",
+  "app.transfercoursesuccess": "Courses transferred successfully!",
+  "app.transfercourseuserrequired": "Please select a user."
 }
