--- a/routes/lang/fr.json
+++ b/routes/lang/fr.json
@@ -1523,5 +1523,8 @@
     "app.passwordtoocommon": "Ce mot de passe est trop courant, veuillez utiliser un mot de passe plus unique.",
     "app.hidepassword": "Cacher le mot de passe",
     "app.passwordatleast": "Votre mot de passe doit contenir au moins :",
-    "app.transferownershipto": "Transférer la propriété à"
+    "app.transferownershipto": "Transférer la propriété à",
+    "app.transfercourseuserrequired": "Veuillez sélectionner un utilisateur.",
+    "app.transfercoursesuccess": "Cours transférés avec succès!",
+    "app.confirmtransfertoanotheruser": "Êtes-vous sûr de vouloir procéder à ce transfert ?"
 }
