implemented the single course transfer feature

--- a/routes/lang/en.json
+++ b/routes/lang/en.json
@@ -506,7 +506,9 @@
   "app.hidepassword": "Hide Password",
   "app.passwordatleast": "Your password must have at least:",
   "app.transferallcoursesownershipto": "Transfer all courses ownership to",
+  "app.transfersinglecourseownershipto": "Transfer course ownership to",
   "app.confirmtransferallcoursestoanotheruser": "You are about to transfer all your courses to the user you select in the following field. Are you sure about this?",
-  "app.transfercoursesuccess": "Courses transferred successfully!",
+  "app.confirmtransfersinglecoursetoanotheruser": "You are about to transfer your course to the user you select in the following field. Are you sure about this?",
+  "app.transfercoursesuccess": "Successfully transferred!",
   "app.transfercourseuserrequired": "Please select a user."
 }
