--- a/routes/lang/fr.json
+++ b/routes/lang/fr.json
@@ -1523,10 +1523,10 @@
     "app.passwordtoocommon": "Ce mot de passe est trop courant, veuillez utiliser un mot de passe plus unique.",
     "app.hidepassword": "Cacher le mot de passe",
     "app.passwordatleast": "Votre mot de passe doit contenir au moins :",
-    "app.transferallcoursesownershipto": "Transférer la propriété de tous les cours à",
+    "app.transferallcoursesownershipto": "Transférer la propriété de tous les cours",
+    "app.transfersinglecourseownershipto": "Transférer la propriété du cours",
     "app.confirmtransferallcoursestoanotheruser": "Vous êtes sur le point de transférer la propriété de tous vos cours à l’utilisateur que vous sélectionnez dans le champ suivant. Êtes-vous sûr de cela ?",
-    "app.transfercoursesuccess": "Transfert réussi!",
-    "app.transfercourseuserrequired": "Veuillez sélectionner un utilisateur.",
-    "app.transfersinglecourseownershipto": "Transférer la propriété du cours à",
-    "app.confirmtransfersinglecoursetoanotheruser": "Vous êtes sur le point de transférer la propriété de tous votre cours à l’utilisateur que vous sélectionnez dans le champ suivant. Êtes-vous sûr de cela ?"
+    "app.confirmtransfersinglecoursetoanotheruser": "Vous êtes sur le point de transférer la propriété de tous votre cours à l’utilisateur que vous sélectionnez dans le champ suivant. Êtes-vous sûr de cela ?",
+    "app.userrequired": "Veuillez sélectionner un utilisateur.",
+    "app.transfersuccess": "Transfert réussi!"
 }
