--- a/routes/lang/en.json
+++ b/routes/lang/en.json
@@ -507,8 +507,8 @@
   "app.passwordatleast": "Your password must have at least:",
   "app.transferallcoursesownershipto": "Transfer all courses ownership",
   "app.transfersinglecourseownershipto": "Transfer course ownership",
-  "app.confirmtransferallcoursestoanotheruser": "You are about to transfer all your courses to the user you select in the following field. Are you sure about this?",
-  "app.confirmtransfersinglecoursetoanotheruser": "You are about to transfer your course to the user you select in the following field. Are you sure about this?",
+  "app.confirmtransferallcoursestoanotheruser": "Are you sure you want to transfer all your courses to the user identified in the following field?",
+  "app.confirmtransfersinglecoursetoanotheruser": "Are you sure you want to transfer your course to the user identified in the following field?",
   "app.transfersuccess": "Successfully transferred!",
   "app.userrequired": "Please select a user."
 }
