--- a/routes/lang/fr.json
+++ b/routes/lang/fr.json
@@ -1596,5 +1596,7 @@
     "app.userrequired": "Veuillez sélectionner un utilisateur.",
     "app.helpdialogmanagement": "Gestion des dialogues d'aide",
     "app.businesslines": "Secteurs d'activité",
-    "app.representative": "Représentant.e"
+    "app.representative": "Représentant.e",
+    "app.helpdialog.technicalissue.text": "Texte du problème technique",
+    "app.helpdialog.accessibility.text": "Texte sur les problèmes d'accessibilité"
 }
