WIP help dialog translation fixes and made the help dialog path consistent

--- a/routes/lang/en.json
+++ b/routes/lang/en.json
@@ -514,9 +514,9 @@
   "app.helpdialogmanagement": "Help Dialog Management",
   "app.businesslines": "Business Lines",
   "app.representative": "Representative",
-  "app.hiddenasset": "Hidden Asset",
   "app.helpdialog.technicalissue.text": "Technical Issue Text",
-  "app.helpdialog.accessibility.text": "Accessibility Issue Text",
+  "app.hiddenasset": "Hidden Asset",
+  "app.helpdialog.accessibilityissue.text": "Accessibility Issue Text",
   "app.fileself": "My Assets",
   "app.filehidden": "Hidden Assets",
   "app.assets.hideasset.label": "Hide from asset library",
