--- a/routes/lang/fr.json
+++ b/routes/lang/fr.json
@@ -1532,9 +1532,9 @@
     "app.helpdialogmanagement": "Gestion des dialogues d'aide",
     "app.businesslines": "Secteurs d'activité",
     "app.representative": "Représentant.e",
-    "app.hiddenasset": "Média Caché",
     "app.helpdialog.technicalissue.text": "Texte du problème technique",
-    "app.helpdialog.accessibility.text": "Texte sur les problèmes d'accessibilité",
+    "app.hiddenasset": "Média Caché",
+    "app.helpdialog.accessibilityissue.text": "Texte sur les problèmes d'accessibilité",
     "app.fileself": "Mes médias",
     "app.filehidden": "Médias Cachés",
     "app.assets.hideasset.label": "Cacher de la bibliothèque de ressources",
