--- a/routes/lang/en.json
+++ b/routes/lang/en.json
@@ -515,5 +515,5 @@
   "app.businesslines": "Business Lines",
   "app.representative": "Representative",
   "app.helpdialog.technicalissue.text": "Technical Issue Text",
-  "app.helpdialog.accessibility.text": "Accessibility Issue Text"
+  "app.helpdialog.accessibilityissue.text": "Accessibility Issue Text"
 }
