--- a/routes/lang/fr.json
+++ b/routes/lang/fr.json
@@ -1598,5 +1598,7 @@
     "app.businesslines": "Secteurs d'activité",
     "app.representative": "Représentant.e",
     "app.helpdialog.technicalissue.text": "Texte du problème technique",
-    "app.helpdialog.accessibilityissue.text": "Texte sur les problèmes d'accessibilité"
+    "app.helpdialog.technicalissuewithcourse.text": "Texte du problème technique avec les cours",
+    "app.helpdialog.accessibilityissue.text": "Texte sur les problèmes d'accessibilité",
+    "app.helpdialog.platformissue.text": "Texte du problème avec la plateforme"
 }
