WIP added more hbs templates for help dialog

--- a/routes/lang/fr.json
+++ b/routes/lang/fr.json
@@ -1533,8 +1533,10 @@
     "app.businesslines": "Secteurs d'activité",
     "app.representative": "Représentant.e",
     "app.helpdialog.technicalissue.text": "Texte du problème technique",
-    "app.hiddenasset": "Média Caché",
     "app.helpdialog.accessibilityissue.text": "Texte sur les problèmes d'accessibilité",
+    "app.hiddenasset": "Média Caché",
+    "app.helpdialog.technicalissuewithcourse.text": "Texte du problème technique avec les cours",
+    "app.helpdialog.platformissue.text": "Texte du problème avec la plateforme",
     "app.fileself": "Mes médias",
     "app.filehidden": "Médias Cachés",
     "app.assets.hideasset.label": "Cacher de la bibliothèque de ressources",
