--- a/routes/lang/en.json
+++ b/routes/lang/en.json
@@ -515,8 +515,10 @@
   "app.businesslines": "Business Lines",
   "app.representative": "Representative",
   "app.helpdialog.technicalissue.text": "Technical Issue Text",
-  "app.hiddenasset": "Hidden Asset",
   "app.helpdialog.accessibilityissue.text": "Accessibility Issue Text",
+  "app.hiddenasset": "Hidden Asset",
+  "app.helpdialog.technicalissuewithcourse.text": "Technical Issue With Course Text",
+  "app.helpdialog.platformissue.text": "Platform Issue Text",
   "app.fileself": "My Assets",
   "app.filehidden": "Hidden Assets",
   "app.assets.hideasset.label": "Hide from asset library",
