--- a/routes/lang/en.json
+++ b/routes/lang/en.json
@@ -514,15 +514,15 @@
   "app.helpdialogmanagement": "Help Dialog Management",
   "app.businesslines": "Business Lines",
   "app.representative": "Representative",
-  "app.helpdialog.technicalissue.text": "Before we continue, please select what type of technical issue you are experiencing. If you are having issue with the authoring tool (Error messages, Interface not working, Translation issues, etc.) please select platform issue. If you are having technical issues with setting up something in a course select Issue with building a course.",
-  "app.helpdialog.technicalissuewithcourse.text": "The first point of contact when you need assistance with building a course is your ATPT representative. If you don't know who your representative is, please select your business line in the following field.",
-  "app.helpdialog.accessibilityissue.text": "Accessibility Issue Text",
-  "app.helpdialog.platformissue.text": "Platform Issue Text",
-  "app.hiddenasset": "Hidden Asset",
-  "app.helpdialog.technicalissuewithcourse.link": "Issue with building a course",
   "app.helpdialog.technicalissue.link": "Technical Issue",
-  "app.helpdialog.platformissue.link": "Platform Issue",
+  "app.helpdialog.technicalissue.text": "Before we continue, please select what type of technical issue you are experiencing. If you are having issue with the authoring tool (Error messages, Interface not working, Translation issues, etc.) please select platform issue. If you are having technical issues with setting up something in a course select Issue with building a course.",
+  "app.helpdialog.technicalissuewithcourse.link": "Issue with building a course",
+  "app.helpdialog.technicalissuewithcourse.text": "The first point of contact when you need assistance with building a course is your ATPT representative. If you don't know who your representative is, please select your business line in the following field.",
   "app.helpdialog.accessibilityissue.link": "Accessibility Issue",
+  "app.helpdialog.accessibilityissue.text": "Accessibility Issue Text",
+  "app.helpdialog.platformissue.link": "Platform Issue",
+  "app.helpdialog.platformissue.text": "To send a request for technical support, please send a message to GD BOX",
+  "app.hiddenasset": "Hidden Asset",
   "app.fileself": "My Assets",
   "app.filehidden": "Hidden Assets",
   "app.assets.hideasset.label": "Hide from asset library",
