--- a/routes/lang/en.json
+++ b/routes/lang/en.json
@@ -521,5 +521,5 @@
   "app.helpdialog.accessibilityissue.link": "Accessibility Issue",
   "app.helpdialog.accessibilityissue.text": "Accessibility Issue Text",
   "app.helpdialog.platformissue.link": "Platform Issue",
-  "app.helpdialog.platformissue.text": "Platform Issue Text"
+  "app.helpdialog.platformissue.text": "To send a request for technical support, please send a message to GD BOX"
 }
