--- a/routes/lang/en.json
+++ b/routes/lang/en.json
@@ -512,6 +512,7 @@
   "app.transfersuccess": "Successfully transferred!",
   "app.userrequired": "Please select a user.",
   "app.helpdialogmanagement": "Help Dialog Management",
+  "app.helpdialog": "Help Dialog",
   "app.businesslines": "Business Lines",
   "app.representative": "Representative",
   "app.helpdialog.technicalissue.link": "Technical Issue",
@@ -523,5 +524,8 @@
   "app.helpdialog.accessibilityissuewithcourse.link": "Accessibility Issue With Course",
   "app.helpdialog.accessibilityissuewithcourse.text": "Accessibility Issue With Course Text",
   "app.helpdialog.platformissue.link": "Platform Issue",
-  "app.helpdialog.platformissue.text": "To send a request for technical support, please send a message to GD BOX"
+  "app.helpdialog.platformissue.text": "To send a request for technical support, please send a message to GD BOX",
+  "app.helpdialog.complianceissue.link": "Compliance Issue",
+  "app.helpdialog.complianceissue.text": "Compliance Issue Text",
+  "app.heldialog.businessline.norepresentative": "There is currently no representative for your selected business line"
 }
