--- a/routes/lang/fr.json
+++ b/routes/lang/fr.json
@@ -1610,5 +1610,9 @@
     "app.helpdialog.platformissue.text": "Texte du problème avec la plateforme",
     "app.helpdialog.complianceissue.link": "Problème de conformité",
     "app.helpdialog.complianceissue.text": "Texte du problème de conformité",
-    "app.heldialog.businessline.norepresentative": "Il n'y a actuellement aucun représentant pour la ligne de votre entreprise sélectionnée."
+    "app.heldialog.businessline.norepresentative": "Il n'y a actuellement aucun représentant pour la ligne de votre entreprise sélectionnée.",
+    "app.heldialog.businessline.representative.helptext": "Vous pouvez cliquer sur le nom de votre représentant pour lui envoyer un message",
+    "app.heldialog.issuewithcourse.support.helptext": "Vous n'obtenez pas de réponses à vos questions ? Vous pouvez ouvrir un billet de support",
+    "app.back": "Retour",
+    "app.here": "Ici"
 }
