replaced hardcoded strings with translatable strings in help dialog templates

--- a/routes/lang/fr.json
+++ b/routes/lang/fr.json
@@ -1530,6 +1530,7 @@
     "app.transfersuccess": "Transfert réussi!",
     "app.userrequired": "Veuillez sélectionner un utilisateur.",
     "app.helpdialogmanagement": "Gestion des dialogues d'aide",
+    "app.helpdialog": "Dialogues d'aide",
     "app.businesslines": "Secteurs d'activité",
     "app.representative": "Représentant.e",
     "app.helpdialog.technicalissue.link": "Problème technique",
@@ -1542,13 +1543,16 @@
     "app.helpdialog.accessibilityissuewithcourse.text": "Accessibility Issue With Course Text",
     "app.helpdialog.platformissue.link": "Problème avec la plateforme",
     "app.helpdialog.platformissue.text": "Texte du problème avec la plateforme",
-    "app.hiddenasset": "Média Caché",
-    "app.helpdialog.complianceissue.text": "Texte du problème de conformité",
     "app.helpdialog.complianceissue.link": "Problème de conformité",
-    "app.helpdialog": "Dialogues d'aide",
+    "app.helpdialog.complianceissue.text": "Texte du problème de conformité",
     "app.heldialog.businessline.norepresentative": "Il n'y a actuellement aucun représentant pour la ligne de votre entreprise sélectionnée.",
+    "app.hiddenasset": "Média Caché",
+    "app.here": "Ici",
+    "app.heldialog.issuewithcourse.support.helptext": "Vous n'obtenez pas de réponses à vos questions ? Vous pouvez ouvrir un billet de support",
+    "app.heldialog.businessline.representative.helptext": "Vous pouvez cliquer sur le nom de votre représentant pour lui envoyer un message",
     "app.fileself": "Mes médias",
     "app.filehidden": "Médias Cachés",
+    "app.back": "Retour",
     "app.assets.hideasset.label": "Cacher de la bibliothèque de ressources",
     "app.assets.hideasset.help": "Utilisez cette option si vous souhaitez que la ressource ne soit visible que par vous-même dans la bibliothèque de ressources. Cette option peut être utilisée pour cacher les ressources protégées (A) afin qu'elles ne soient pas visibles par tous les utilisateurs."
 }
