--- a/routes/lang/en.json
+++ b/routes/lang/en.json
@@ -512,6 +512,7 @@
   "app.transfersuccess": "Successfully transferred!",
   "app.userrequired": "Please select a user.",
   "app.helpdialogmanagement": "Help Dialog Management",
+  "app.helpdialog": "Help Dialog",
   "app.businesslines": "Business Lines",
   "app.representative": "Representative",
   "app.helpdialog.technicalissue.link": "Technical Issue",
@@ -524,13 +525,16 @@
   "app.helpdialog.accessibilityissuewithcourse.text": "Accessibility Issue With Course Text",
   "app.helpdialog.platformissue.link": "Platform Issue",
   "app.helpdialog.platformissue.text": "To send a request for technical support, please send a message to GD BOX",
-  "app.hiddenasset": "Hidden Asset",
-  "app.helpdialog.complianceissue.text": "Compliance Issue Text",
   "app.helpdialog.complianceissue.link": "Compliance Issue",
-  "app.helpdialog": "Help Dialog",
+  "app.helpdialog.complianceissue.text": "Compliance Issue Text",
   "app.heldialog.businessline.norepresentative": "There is currently no representative for your selected business line",
+  "app.hiddenasset": "Hidden Asset",
+  "app.here": "Here",
+  "app.heldialog.issuewithcourse.support.helptext": "You are unable to get answers to your questions? You can open a support ticket",
+  "app.heldialog.businessline.representative.helptext": "You can click on your representative's name to send them a message",
   "app.fileself": "My Assets",
   "app.filehidden": "Hidden Assets",
+  "app.back": "Back",
   "app.assets.hideasset.label": "Hide from asset library",
   "app.assets.hideasset.help": "Use this option if you want the asset to be only visible by yourself in the Asset Library. This can used to hide protected (A) assets from being seen by all users."
 }
