corrected help dialog translatable strings

--- a/routes/lang/en.json
+++ b/routes/lang/en.json
@@ -524,17 +524,16 @@
   "app.helpdialog.accessibilityissuewithcourse.link": "Accessibility Issue With Course",
   "app.helpdialog.accessibilityissuewithcourse.text": "Accessibility Issue With Course Text",
   "app.helpdialog.platformissue.link": "Platform Issue",
-  "app.helpdialog.platformissue.text": "To send a request for technical support, please send a message to GD BOX",
+  "app.helpdialog.platformissue.text": "Technical Issue Form",
   "app.helpdialog.complianceissue.link": "Compliance Issue",
   "app.helpdialog.complianceissue.text": "Compliance Issue Text",
   "app.heldialog.businessline.norepresentative": "There is currently no representative for your selected business line",
-  "app.hiddenasset": "Hidden Asset",
-  "app.here": "Here",
-  "app.heldialog.issuewithcourse.support.helptext": "You are unable to get answers to your questions? You can open a support ticket",
   "app.heldialog.businessline.representative.helptext": "You can click on your representative's name to send them a message",
+  "app.heldialog.issuewithcourse.support.helptext": "You are unable to get answers to your questions? You can <a class='%{classname}' data-help-dialog-next-view='%{nextview}'> open a support ticket </a>",
+  "app.back": "Back",
+  "app.hiddenasset": "Hidden Asset",
   "app.fileself": "My Assets",
   "app.filehidden": "Hidden Assets",
-  "app.back": "Back",
   "app.assets.hideasset.label": "Hide from asset library",
   "app.assets.hideasset.help": "Use this option if you want the asset to be only visible by yourself in the Asset Library. This can used to hide protected (A) assets from being seen by all users."
 }
