--- a/routes/lang/fr.json
+++ b/routes/lang/fr.json
@@ -1542,17 +1542,16 @@
     "app.helpdialog.accessibilityissuewithcourse.link": "Accessibility Issue With Course",
     "app.helpdialog.accessibilityissuewithcourse.text": "Accessibility Issue With Course Text",
     "app.helpdialog.platformissue.link": "Problème avec la plateforme",
-    "app.helpdialog.platformissue.text": "Texte du problème avec la plateforme",
+    "app.helpdialog.platformissue.text": "Formulaire d'assistance technique",
     "app.helpdialog.complianceissue.link": "Problème de conformité",
     "app.helpdialog.complianceissue.text": "Texte du problème de conformité",
     "app.heldialog.businessline.norepresentative": "Il n'y a actuellement aucun représentant pour la ligne de votre entreprise sélectionnée.",
-    "app.hiddenasset": "Média Caché",
-    "app.here": "Ici",
-    "app.heldialog.issuewithcourse.support.helptext": "Vous n'obtenez pas de réponses à vos questions ? Vous pouvez ouvrir un billet de support",
     "app.heldialog.businessline.representative.helptext": "Vous pouvez cliquer sur le nom de votre représentant pour lui envoyer un message",
+    "app.heldialog.issuewithcourse.support.helptext": "Vous n'obtenez pas de réponses à vos questions ? Vous pouvez <a class='%{classname}' data-help-dialog-next-view='%{nextview}'> ouvrir un billet de support </a>",
+    "app.back": "Retour",
+    "app.hiddenasset": "Média Caché",
     "app.fileself": "Mes médias",
     "app.filehidden": "Médias Cachés",
-    "app.back": "Retour",
     "app.assets.hideasset.label": "Cacher de la bibliothèque de ressources",
     "app.assets.hideasset.help": "Utilisez cette option si vous souhaitez que la ressource ne soit visible que par vous-même dans la bibliothèque de ressources. Cette option peut être utilisée pour cacher les ressources protégées (A) afin qu'elles ne soient pas visibles par tous les utilisateurs."
 }
