updated translations for help dialog

--- a/routes/lang/en.json
+++ b/routes/lang/en.json
@@ -516,22 +516,23 @@
   "app.businesslines": "Business Lines",
   "app.representative": "Representative",
   "app.helpdialog.technicalissue.link": "Technical Issue",
-  "app.helpdialog.technicalissue.text": "Before we continue, please select what type of technical issue you are experiencing. If you are having issue with the authoring tool (Error messages, Interface not working, Translation issues, etc.) please select platform issue. If you are having technical issues with setting up something in a course select Issue with building a course.",
+  "app.helpdialog.technicalissue.text": "Before we continue, please select what type of technical issue you are experiencing. If you are having an issue with the authoring tool (error messages, interface not working, translation issues, etc.), please select <em>Issue with the platform</em>. If you are having technical issues with setting up something in a course, select <em>Issue with building a course</em>.",
   "app.helpdialog.technicalissuewithcourse.link": "Issue with building a course",
-  "app.helpdialog.technicalissuewithcourse.text": "The first point of contact when you need assistance with building a course is your ATPT representative. If you don't know who your representative is, please select your business line in the following field.",
+  "app.helpdialog.technicalissuewithcourse.text": "The first point of contact when you need assistance with building a course is your representative from the <em>Authoring Tool Project Team</em>. If you don't know who your representative is, please select your business line in the following field.",
   "app.helpdialog.accessibilityissue.link": "Accessibility Issue",
-  "app.helpdialog.accessibilityissue.text": "Accessibility Issue Text",
-  "app.helpdialog.accessibilityissuewithcourse.link": "Accessibility Issue With Course",
-  "app.helpdialog.accessibilityissuewithcourse.text": "Accessibility Issue With Course Text",
-  "app.helpdialog.platformissue.link": "Platform Issue",
-  "app.helpdialog.platformissue.text": "Technical Issue Form",
-  "app.helpdialog.complianceissue.link": "Compliance Issue",
-  "app.helpdialog.complianceissue.text": "Compliance Issue Text",
-  "app.heldialog.businessline.norepresentative": "There is currently no representative for your selected business line",
-  "app.heldialog.businessline.representative.helptext": "You can click on your representative's name to send them a message",
-  "app.heldialog.issuewithcourse.support.helptext": "You are unable to get answers to your questions? You can <a class='%{classname}' data-help-dialog-next-view='%{nextview}'> open a support ticket </a>",
+  "app.helpdialog.accessibilityissue.text": "Before we continue, please select what type of accessibility issue you are experiencing. If you are having an issue using the authoring tool with assistive devices, please select <em>Issue with the platform</em>. If you are having issues with course configuration in order to comply with accessibility, select <em>Issue with building a course</em>.",
+  "app.helpdialog.accessibilityissuewithcourse.link": "Issue with building a course",
+  "app.helpdialog.accessibilityissuewithcourse.text": "The first point of contact when you need assistance with making a course accessibility compliant is your representative from the <em>Accessibility Allies Network</em>. If you don't know who your representative is, please select your business line in the following field:",
+  "app.helpdialog.platformissue.link": "Issue with the platform",
+  "app.helpdialog.platformissue.text": "To open a ticket with the Tech Solution and Business Analysis Team at LIT, please fill in the <a href='https://forms.office.com/Pages/ResponsePage.aspx?id=RljVnoGKRkKs2LGgGr_A0Un9OJIvHjNFiFE__NvAv8RUN083SEdWSDNUSE9JVU5RMzZRMk5YR1NOUi4u' target='_blank'>Technical Support Form</a>.",
+  "app.helpdialog.complianceissue.text": "To ask recommendations from the Accessibility Team at MED, you can send an email to the <a href='mailto:edsc.dgsrh.accessibilite-accessibility.hrsb.esdc@servicecanada.gc.ca?subject=Accessibility%20Questions'>Accessibility GD Mailbox</a>.",
+  "app.heldialog.businessline.norepresentative": "There is currently no representative for your selected business line.",
+  "app.heldialog.businessline.representative.helptext": "You can click on your representative's name to send them a message.",
   "app.back": "Back",
   "app.hiddenasset": "Hidden Asset",
+  "app.helpdialog.platformissue.technicalissueform": "Technical Issue Form",
+  "app.heldialog.technicalissuewithcourse.support.helptext": "You are unable to get answers to your questions? You can <a class='%{classname}' data-help-dialog-next-view='%{nextview}'>open a support ticket</a>.",
+  "app.heldialog.accessibilityissuewithcourse.support.helptext": "You are unable to get answers to your questions? You can ask for <a class='%{classname}' data-help-dialog-next-view='%{nextview}'>accessibility recommendations</a>.",
   "app.fileself": "My Assets",
   "app.filehidden": "Hidden Assets",
   "app.assets.hideasset.label": "Hide from asset library",
