--- a/routes/lang/fr.json
+++ b/routes/lang/fr.json
@@ -1534,22 +1534,23 @@
     "app.businesslines": "Secteurs d'activité",
     "app.representative": "Représentant.e",
     "app.helpdialog.technicalissue.link": "Problème technique",
-    "app.helpdialog.technicalissue.text": "Avant de poursuivre, veuillez sélectionner le type de problème technique que vous rencontrez. Si vous rencontrez des problèmes avec l'outil de création (messages d'erreur, interface qui ne fonctionne pas, problèmes de traduction, etc. Si vous rencontrez des problèmes techniques liés à la configuration d'un cours, sélectionnez Problème lié à la création d'un cours.",
-    "app.helpdialog.technicalissuewithcourse.link": "Problème lié à la construction d'un cours",
-    "app.helpdialog.technicalissuewithcourse.text": "Le premier point de contact lorsque vous avez besoin d'aide pour construire un cours est votre représentant ATPT. Si vous ne savez pas qui est votre représentant, veuillez sélectionner votre secteur d'activité dans le champ suivant.",
-    "app.helpdialog.accessibilityissue.link": "Accessibility Issue",
-    "app.helpdialog.accessibilityissue.text": "Texte sur les problèmes d'accessibilité",
-    "app.helpdialog.accessibilityissuewithcourse.link": "Accessibility Issue With Course",
-    "app.helpdialog.accessibilityissuewithcourse.text": "Accessibility Issue With Course Text",
+    "app.helpdialog.technicalissue.text": "Avant de poursuivre, veuillez sélectionner le type de problème technique que vous rencontrez. Si vous rencontrez des problèmes avec l'outil de création (messages d'erreur, interface qui ne fonctionne pas, problèmes de traduction, etc.), sélectionnez <em>Problème avec la plateforme</em>. Si vous rencontrez des problèmes techniques liés à la configuration d'un cours, sélectionnez <em>Problème lié à la création d'un cours</em>.",
+    "app.helpdialog.technicalissuewithcourse.link": "Problème lié à la configuration d'un cours",
+    "app.helpdialog.technicalissuewithcourse.text": "Le premier point de contact lorsque vous avez besoin d'aide pour construire un cours est votre représentant du <em>Groupe de travail des outils de création</em>. Si vous ne savez pas qui est votre représentant, veuillez sélectionner votre secteur d'activité dans le champ suivant&nbsp;:",
+    "app.helpdialog.accessibilityissue.link": "Problème d'accessibilité",
+    "app.helpdialog.accessibilityissue.text": "Avant de poursuivre, veuillez sélectionner le type de problème d'accessibilité que vous rencontrez. Si vous avez des difficultés à utiliser l'outil de création avec des dispositifs d'assistance, sélectionnez <em>Problème avec la plateforme</em>. Si vous rencontrez des problèmes pour configurer le cours afin qu'il réponde aux exigences d'accessibilité, sélectionnez <em>Problème lié à la création d'un cours</em>.",
+    "app.helpdialog.accessibilityissuewithcourse.link": "Problème d'accessibilité lié à la configuration d'un cours",
+    "app.helpdialog.accessibilityissuewithcourse.text": "Le premier point de contact lorsque vous avez besoin d'aide pour rendre un cours conforme aux normes d'accessibilité est votre représentant du <em>Réseau des alliés de l'accessibilité</em>. Si vous ne savez pas qui est votre représentant, veuillez sélectionner votre secteur d'activité dans le champ suivant&nbsp;:",
     "app.helpdialog.platformissue.link": "Problème avec la plateforme",
-    "app.helpdialog.platformissue.text": "Formulaire d'assistance technique",
-    "app.helpdialog.complianceissue.link": "Problème de conformité",
-    "app.helpdialog.complianceissue.text": "Texte du problème de conformité",
+    "app.helpdialog.platformissue.text": "Pour ouvrir un billet auprès de l'équipe Tech Solution and Business Analysis de LIT, veuillez remplir <a href='https://forms.office.com/Pages/ResponsePage.aspx?id=RljVnoGKRkKs2LGgGr_A0Un9OJIvHjNFiFE__NvAv8RUN083SEdWSDNUSE9JVU5RMzZRMk5YR1NOUi4u&lang=fr-CA' target='_blank'>le Formulaire d'assistance technique</a>.",
+    "app.helpdialog.complianceissue.text": "Pour demander des recommandations à l'équipe Accessibilité de DMC, vous pouvez envoyer un courriel à la <a href='mailto:edsc.dgsrh.accessibilite-accessibility.hrsb.esdc@servicecanada.gc.ca?subject=Questions%20concernant%20l%27accessibilité'>Boîte&nbsp;générique&nbsp;Accessibilité</a>.",
     "app.heldialog.businessline.norepresentative": "Il n'y a actuellement aucun représentant pour la ligne de votre entreprise sélectionnée.",
-    "app.heldialog.businessline.representative.helptext": "Vous pouvez cliquer sur le nom de votre représentant pour lui envoyer un message",
-    "app.heldialog.issuewithcourse.support.helptext": "Vous n'obtenez pas de réponses à vos questions ? Vous pouvez <a class='%{classname}' data-help-dialog-next-view='%{nextview}'> ouvrir un billet de support </a>",
+    "app.heldialog.businessline.representative.helptext": "Vous pouvez cliquer sur le nom de votre représentant pour lui envoyer un message.",
     "app.back": "Retour",
     "app.hiddenasset": "Média Caché",
+    "app.helpdialog.platformissue.technicalissueform": "Formulaire d'assistance technique",
+    "app.heldialog.technicalissuewithcourse.support.helptext": "Vous n'obtenez pas de réponses à vos questions ? Vous pouvez <a class='%{classname}' data-help-dialog-next-view='%{nextview}'>ouvrir un billet de support</a>.",
+    "app.heldialog.accessibilityissuewithcourse.support.helptext": "Vous n'obtenez pas de réponses à vos questions ? Vous pouvez demander des <a class='%{classname}' data-help-dialog-next-view='%{nextview}'>recommandations&nbsp;en&nbsp;matière&nbsp;d'accessibilité</a>.",
     "app.fileself": "Mes médias",
     "app.filehidden": "Médias Cachés",
     "app.assets.hideasset.label": "Cacher de la bibliothèque de ressources",
