--- a/routes/lang/fr.json
+++ b/routes/lang/fr.json
@@ -1614,5 +1614,7 @@
     "app.heldialog.businessline.representative.helptext": "Vous pouvez cliquer sur le nom de votre représentant pour lui envoyer un message.",
     "app.heldialog.technicalissuewithcourse.support.helptext": "Vous n'obtenez pas de réponses à vos questions ? Vous pouvez <a class='%{classname}' data-help-dialog-next-view='%{nextview}'>ouvrir un billet de support</a>.",
     "app.heldialog.accessibilityissuewithcourse.support.helptext": "Vous n'obtenez pas de réponses à vos questions ? Vous pouvez demander des <a class='%{classname}' data-help-dialog-next-view='%{nextview}'>recommandations&nbsp;en&nbsp;matière&nbsp;d'accessibilité</a>.",
-    "app.back": "Retour"
+    "app.back": "Retour",
+    "app.representative.atpt": "Représentant(e) du Groupe de travail des outils de création (GTOC)",
+    "app.representative.alliesnetwork": "Représentant(e) du Réseau des alliés de l'accessibilité"
 }
